force-app/main/default/objects/Redemption__c/Redemption__c.object-meta.xml
<CustomObject>
    <label>Credit Note Redemption</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Redemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Redemptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>