force-app/main/default/objects/Redemption__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Credit Note Redemptions</relationshipLabel>
    <relationshipName>Credit_Note_Redemptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>