force-app/main/default/objects/Redemption__c/fields/Redeemed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Amount__c</fullName>
    <label>Redeemed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>